# INISerialization

./: CMakeLists.txt  INISerializer.cpp  README.md
include/: INISerializer.h  Serialization.h
include/templateSpecialization/: array.h  floatingpoint.h  integers.h  misc.h  pair.h  tuple.h  util.h  vector.h
tests/: CMakeLists.txt  DeserializationTest.cpp  MalformedTests.cpp  SerializationTest.cpp  UnitTest++.cpp  UnitTest++.h
